<resources>
    <string name="app_name">snAPP - The Weight Workout App</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="text_box_prompt">Name</string>
    <string name="header_arms">Arms</string>
    <string name="header_newWk">New Workout</string>
    <string name="create_new_workout">Create</string>
    <string name="title_activity_setup_workout">SetupWorkoutActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="exercise_names_heading">Exercise Names</string>
    <string name="exercise_reps_heading">Number of Repetitions</string>
    <string name="exercise_settings_heading">Seat setting and Weight setting</string>
    <string name="title_activity_setup_new_workout">SetupNewWorkoutActivity</string>

</resources>
