<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mkels.snapp.MainActivity">

    <EditText
        android:id="@+id/workoutNameTextbox"
        android:layout_width="209dp"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:contentDescription="@string/text_box_prompt"
        android:ems="10"
        android:inputType="textPersonName"
        android:textStyle="italic"
        app:layout_constraintLeft_toLeftOf="@+id/editText"
        tools:layout_editor_absoluteY="58dp"
        android:layout_marginRight="0dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintRight_toRightOf="@+id/editText" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:onClick="sendMessage"
        android:text="@string/button_send"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText"
        app:layout_constraintLeft_toRightOf="@+id/editText"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:contentDescription="@string/text_box_prompt"
        android:ems="10"
        android:inputType="textPersonName"
        android:textStyle="italic"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="182dp" />

    <TextView
        android:id="@+id/armHeader"
        android:layout_width="107dp"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="90dp"
        android:text="@string/header_arms"
        android:textAlignment="viewStart"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.454" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/header_newWk"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        tools:layout_editor_absoluteX="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/createWkoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="38dp"
        android:onClick="setupNewWorkout"
        android:text="@string/create_new_workout"
        app:layout_constraintBaseline_toBaselineOf="@+id/workoutNameTextbox"
        app:layout_constraintLeft_toLeftOf="@+id/button"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>
